--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "PhD in Civil Engineering, Postdoctoral Fellow at The University of Texas at Austin"
   location         : "Austin, TX"
-  employer         : "UT Austin"
+  employer         : "The University of Texas at Austin"
   uri              : # URL
   email            : "yiming.xu@utexas.edu" 
 
