--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : https://www.linkedin.com/in/yimingxuuf/
+  linkedin         : yimingxuuf
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
