--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,13 @@
 # prevent it from being included in the site.
 
 main:
+
+  - title: "About"
+    url: /about/
+
+  - title: "Projects"
+    url: /projects/
+
   - title: "Publications"
     url: /publications/
 
@@ -22,9 +29,10 @@ main:
     
   - title: "CV"
     url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
 
-  - title: "Projects"
-    url: /projects/
+  - title: "Contact Me"
+    url: /contact/
+    
+  # - title: "Guide"
+  #   url: /markdown/
+
