--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,10 +5,6 @@
 # prevent it from being included in the site.
 
 main:
-
-  - title: "Projects"
-    url: /projects/
-
   - title: "Publications"
     url: /publications/
 
@@ -23,12 +19,15 @@ main:
         
   # - title: "Blog Posts"
   #   url: /year-archive/
+
+  - title: "Projects"
+    url: /projects/
     
   - title: "CV"
     url: /cv/
   
-  - title: "News"
-    url: /news/
+  # - title: "News"
+  #   url: /news/
 
   - title: "Contact Me"
     url: /contact/
